# LockAPP

./: .gitignore  AGENTS.md  CODEX_TASK.md  COPYRIGHT.md  Makefile  README.md  USAGE_POLICY.md  project.yml
Linux/: .gitignore  README.md  TEST_REPORT.md  lockcode.py  pyproject.toml
Linux/RPM/: README.md  build-rpm.sh  lockcode.spec.in
Linux/assets/: com.lockcode.Linux.desktop  lockcode.service
Linux/installer/: build-deb.sh  control.in  postinst  postrm  prerm
Linux/lockcode/: __init__.py  audit.py  biometrics.py  catalog.py  main.py  policy.py  protection.py  secure_store.py  settings.py  startup.py  updates.py
Linux/tests/: test_core.py
LockCode.xcodeproj/: project.pbxproj
LockCode/App/: AppModel.swift  LockCodeApp.swift  LockCodeApplicationDelegate.swift
LockCode/Models/: AccessRequest.swift  AppVersion.swift  ApplicationAccessState.swift  AuditEvent.swift  AuthenticationAttemptLimiter.swift  InstalledApplication.swift  PINCredential.swift  PINPolicy.swift  UnlockDuration.swift
LockCode/Resources/: Info.plist  LockCode.icns
LockCode/Services/: AppCatalogService.swift  AuditLogStore.swift  (+8 more)
LockCodeTests/: AppProtectionServiceTests.swift  AppVersionTests.swift  ApplicationAccessStateTests.swift  AuditLogStoreTests.swift  AuthenticationAttemptLimiterTests.swift  GitHubReleaseTests.swift  PINCredentialTests.swift  PINPolicyTests.swift  SettingsStoreTests.swift  UnlockDurationTests.swift
Windows/: .gitignore  README.md  TEST_REPORT.md  build.ps1
docs/: ACCEPTANCE_TESTS.md  PRODUCT_SPEC.md  SECURITY_MODEL.md  TEST_REPORT.md
macOS/: .gitignore
(+35 files in other folders)
